First section done only image add and responsiveness pending

--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Krishanu Mandal</title>
-</head>
-<body>
-    <p>Will be display in some days </p>
-</body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/utilities.css"> -->
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <nav class="flex item-center justify-between">
+          <div class="left flex item-center">
+            <div class="branding">
+              <img src="./assets/images/logo.png" alt="KRISHANU" />
+            </div>
+            <div>
+              <a href="">Home</a>
+              <a href="">About</a>
+              <a href="">Ability</a>
+              <a href="">Sklii</a>
+              <a href="">Projects</a>
+              <a href="">Blogs</a>
+            </div>
+          </div>
+          <div class="right">
+            <button class="btn btn-primary">Contact</button>
+          </div>
+        </nav>
+        <div class="self flex item-center justify-between">
+          <div class="left flex-1 flex justify-center">
+            <!-- <img src="./assets/images/man_demo.png" alt="img" /> -->
+            <img src="./assets/" alt="img" />
+          </div>
+          <div class="right flex-1">
+            <h6>Krishanu Mandal</h6>
+            <h1>I'm a <span class="iam">Developer</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sequi assumenda, culpa accusamus deserunt voluptatum vitae officia quidem. Cupiditate dolor temporibus quia quos explicabo, totam voluptatibus minus incidunt in voluptatum! Incidunt dolor cupiditate temporibus hic?</p>
+            <div>
+                <button class="btn btn-secondery">Download CV</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
