project section but project not add yet

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a href="#ability">Ability</a>
               <a href="#skill">Sklii</a>
               <a href="#project">Projects</a>
-              <a href="">Blogs</a>
+              <a href="#publication">Publications</a>
             </div>
           </div>
           <div class="right">
@@ -173,6 +173,44 @@
             <h2>JAVA</h2>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- Skill section end here -->
+    <section class="project" id="project">
+      <div class="container">
+        <h1 class="section-heading">My <span class="iam">Works</span></h1>
+        <p>skillllllllllll texttttttttt ttttt</p>
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="overlay">
+              <span>Catagory</span>
+              <a href="#">Project Link</a>
+            </div>
+            <img src="./assets/images/tempProject.png" alt="">
+          </div>
+          <div class="card">
+            <div class="overlay">
+              <span>Catagory</span>
+              <a href="#">Project Link</a>
+            </div>
+            <img src="./assets/images/tempProject.png" alt="">
+          </div>
+          <div class="card">
+            <div class="overlay">
+              <span>Catagory</span>
+              <a href="#">Project Link</a>
+            </div>
+            <img src="./assets/images/tempProject.png" alt="">
+          </div>
+          <div class="card">
+            <div class="overlay">
+              <span>Catagory</span>
+              <a href="#">Project Link</a>
+            </div>
+            <img src="./assets/images/tempProject.png" alt="">
+          </div>
+        </div>
+        
       </div>
     </section>
   </body>
