--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <!-- first section -->
+    <marquee behavior="" direction="">Under Development</marquee>
     <header id="home">
       <div class="container">
         <!-- Nav bar -->
