publication section added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Nav bar -->
         <nav class="flex item-center justify-between">
           <div class="left flex item-center">
-            <div class="branding">
+            <div class="branding"> 
               <img src="./assets/images/logo.png" alt="KRISHANU" />
             </div>
             <div>
@@ -210,8 +210,51 @@
             </div>
             <img src="./assets/images/tempProject.png" alt="">
           </div>
+        </div> 
+      </div>
+    </section>
+    <!-- project section end here -->
+
+    <!-- Publication section start here -->
+    <section class="publication" id="publication">
+      <div class="container">
+        <h1 class="section-heading"><span class="iam">Publications</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perferendis quae voluptates</p>
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="img-wrapper">
+              <img src="./assets/images/tempPublication.png" alt="">
+            </div>
+            <div class="card-content">
+              <a href=""><h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1></a>  
+              <span>Jul 10, 2023</span>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus quidem incidunt mollitia autem ratione vitae repellat, nostrum fugit est veniam quia deserunt dolor praesentium hic, earum maiores. </p>
+              <a href="" class="view-paper">View Paper</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-wrapper">
+              <img src="./assets/images/tempPublication.png" alt="">
+            </div>
+            <div class="card-content">
+              <a href=""><h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1></a>  
+              <span>Jul 10, 2023</span>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus quidem incidunt mollitia autem ratione vitae repellat, nostrum fugit est veniam quia deserunt dolor praesentium hic, earum maiores. </p>
+              <a href="" class="view-paper">View Paper</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-wrapper">
+              <img src="./assets/images/tempPublication.png" alt="">
+            </div>
+            <div class="card-content">
+              <a href=""><h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1></a>  
+              <span>Jul 10, 2023</span>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus quidem incidunt mollitia autem ratione vitae repellat, nostrum fugit est veniam quia deserunt dolor praesentium hic, earum maiores. </p>
+              <a href="" class="view-paper">View Paper</a>
+            </div>
+          </div>
         </div>
-        
       </div>
     </section>
   </body>
